# py-psscriptanalyzer

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  .pre-commit-config.yaml.example  .pre-commit-hooks.yaml  .prettierignore  .readthedocs.yaml  .yamllint  CHANGELOG.md  CODE_OF_CONDUCT  CODE_OF_CONDUCT.md  LICENSE  README.md  auto-label.json5  pyproject.toml  test-good.ps1
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature-request.yaml
.github/workflows/: auto-label.yaml  code-quality.yaml  docs.yaml  publish-docs.yaml  release.yaml  sync-docs-version.yaml  test-coverage.yaml  test-integration.yaml
docs/: Makefile  api.md  conf.py  configuration.md  development.md  index.md  index.rst  installation.md  usage.md
examples/: README.md
examples/classes/: BadClasses.ps1
examples/functions/: BadFunctions.psm1
examples/modules/: BadModule.psd1  BadModule.psm1
examples/scripts/: AdvancedIssues.ps1  BadScript.ps1  ConfigurationIssues.ps1  EdgeCases.ps1  InformationIssues.ps1  MixedSeverity.ps1  test.ps1
src/py_psscriptanalyzer/: __init__.py  __main__.py  cli.py  constants.py  core.py  powershell.py  scripts.py
tests/: test_cli.py  test_core.py  test_github_actions.py  test_powershell.py  test_rule_filters.py  test_sarif_categories.py  test_scripts_coverage.py  test_security_sarif.py  test_severity.py  test_simple.py
